# ERG_GUI

./: Data_2_Pandas_MaxERG  Vis_2_0.ipynb  Vis_2_0.py  encoder.pkl  pyproject.toml  st_app.py  train.ipynb  train.py
.ipynb_checkpoints/: train-checkpoint.ipynb
.jupyter/: desktop-settings.json
erg dashboard/: pyproject.toml  todo.md
erg dashboard/gui/: db.sqlite3  package-lock.json
erg dashboard/gui/gui/: asgi.py  settings.py  urls.py  wsgi.py
erg dashboard/gui/gui_app/: apps.py  forms.py  models.py  preprocessing.py  urls.py  views.py
erg dashboard/gui/gui_app/migrations/: 0001_initial.py
erg dashboard/gui/static/js/: index.js
erg dashboard/gui/staticfiles/css/: style.css
erg dashboard/gui/templates/: base.html  index.html
gui_project/: db.sqlite3
gui_project/gui_app/: admin.py  forms.py  models.py  urls.py  views.py
gui_project/gui_app/migrations/: 0001_initial.py
gui_project/gui_project/: asgi.py  settings.py  urls.py  wsgi.py
gui_project/static/css/: style.css
gui_project/static/js/: index.js
gui_project/templates/: base.html  model_upload.html  simple_upload.html
