[tool.poetry]
package-mode = false
name = "erg-gui"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1"
pandas = "^2.2.2"
pyright = "^1.1.377"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
pythonPath = "/opt/homebrew/Caskroom/miniconda/base/envs/oculusgraphy/bin/"
venvPath = "/opt/homebrew/Caskroom/miniconda/base/envs/"
venv = "oculusgraphy"
typeCheckingMode = "off"