[tool.poetry]
name = "erg dashboard"
version = "0.1.0"
description = ""
authors = ["Faisal Albasu <albasfaisal@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
numpy = "^2.0.1"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
scipy = "^1.14.0"
scikit-learn = "^1.5.1"
seaborn = "^0.13.2"
imbalanced-learn = "^0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
